--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-     <title>Django</title>
-  </head>
-  <body>
-     <h1>Hello Django</h1>
-     <hr>
-     <p>Welcome django first test Page</p>
-     <p>University: Ustudy</p>
-     <p>Course: Python</p>
-  </body>
-</html>
+{% extends 'homebase.html' %}
+{% load static %}
+
+
+
+{% block banner %} {% include 'banner.html' %} {% endblock %}
+{% block body %} {% include 'content.html' %} {% endblock %}
